gccida/c2/alter_reg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alter_reg/src/reload1.c:2451:29: error: use of undeclared identifier 'machine_mode'
v13 = assign_stack_local( ( machine_mode)v9, v12, -( v10 < v11)); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alter_reg/src/reload1.c:2462:29: error: use of undeclared identifier 'machine_mode'
v13 = assign_stack_local( ( machine_mode)v9, v12, -( v12 != v10)); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alter_reg/src/reload1.c:2466:19: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = ( __int64 *)v16[1]; 
                  ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alter_reg/src/reload1.c:2493:32: error: use of undeclared identifier 'machine_mode'
v20 = adjust_address_1( v13, ( machine_mode)*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[v3] + 2), 0LL, 0, 1); 
                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alter_reg/src/obj/reload1.o] Error 1
